public/css/settings.css
header {
    position: relative;
    height: 50px;
}

header > * {
    position: absolute;
    transform: translateY(-50%);
    top: 50%;
}

#themes button {
    border-radius: 50px;
    padding: 2px 8px;
}

#forest {
    border: rgb(59, 97, 78) solid 2px;
    background: rgb(33, 34, 27);
    color: rgb(201, 235, 197);
}

#ruby {
    border: rgb(97, 71, 59) solid 2px;
    background: rgb(34, 27, 27);
    color: rgb(235, 233, 197);
}

#ocean {
    border: rgb(59, 77, 97) solid 2px;
    background: rgb(28, 27, 34);
    color: rgb(197, 234, 235);
}

#gold-chip {
    border: rgb(141, 134, 76) solid 2px;
    background: rgb(18, 18, 19);
    color: rgb(255, 246, 209);
}

#delete-account {
    position: absolute;
    right: 5px;
    font-size: 28px;
   
}

.my-post, .my-comment {
    position: relative;
    background: var(--layer1);
    display: inline-block;
    color: inherit;
    padding: 10px;
    width: 90%;
   
    margin-bottom: 10px;
}

#toggle-my-posts, #toggle-my-comments {
    width: 100%;
    background: var(--layer2);
    padding: 5px;
    margin-bottom: 5px;
    cursor: pointer;
}

#toggle-my-posts > *, #toggle-my-comments > * {
    display: inline-block;
}

#toggle-my-posts p, #toggle-my-comments p{
    width: 80%;
}

#toggle-my-posts button, #toggle-my-comments button{
    width: initial;
    background: inherit;
    color: inherit;
    border: none;
    transition: transform .15s;
}

#my-posts, #my-comments {
    display: none;
    width: 100%;
    overflow-y: scroll;
    color: var(--body-text);
    text-align:left;
    margin-bottom: 10px;
}

.my-post-title{
    resize: none;
    font-family: inherit;
    color: var(--highlight);
    font-size: 24px;
    width: 80%;
    background: inherit;
    border: none;
}

.my-post-title::placeholder {
    color: var(--highlight);
}

.my-post-body, .my-comment textarea {
    font-family: inherit;
    font-size: inherit;
    display:inline-block;
    white-space: pre-wrap;
    width: 100%;
    height: auto;
    resize: vertical;
    background: inherit;
    color: var(--body-text);
}

.my-tag {
    display: inline-block;
    padding: 2px 0px 2px 10px;
    background: var(--layer2);
    margin-right: 5px;
    margin-bottom: 5px;
    border-radius: 10px;
    font-size: 14px;
}

.delete-tag {
    cursor: pointer;
    height: 100%;
    display: inline-block;
    background: var(--layer0);
    margin-left: 5px;
    padding: 5px 10px;
    text-align:center;
}

.delete-post, .delete-comment {
    cursor: pointer;
    position: absolute;
    border: none;
    top: 0;
    right: 0;
    background:var(--layer2);
    color:inherit;
    border-bottom-left-radius: 10px;
    font-size: 24px;
}

/* .my-comment {
    position: relative;
    padding: 5px;
    background: var(--layer1);
} */

/* .my-comment textarea {
    min-height: 1em;
    height: initial;
} */

.my-comment p {
    padding: 10px 0px;
    text-align:left;
    white-space: pre-wrap;
}

